--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,20 @@
 name: n_image_picker
-description: Neil's Image Picker.
-version: 0.0.1+1
+description: Configurable and easy-to-use cross-platform image selector.
+version: 0.0.1+3
 
 homepage: https://github.com/nycm1989/nImagePicker
+repository: https://github.com/nycm1989/nImagePicker
+
+topics:
+  - picker
+  - image
+  - preview
+  - cross-platform
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
   flutter: '>=3.3.0'
+
 
 dependencies:
   file_picker: ^5.5.0
@@ -21,7 +29,9 @@ dev_dependencies:
     sdk: flutter
   # flutter_lints: ^2.0.0
 
-
+screenshots:
+  - description: 'Loaded image screenshot'
+    path: screens/2.png
 # flutter:
 #   plugin:
 #     platforms:
