--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 0.0.1+3
+version: 0.0.1+6
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -32,9 +32,20 @@ dev_dependencies:
 screenshots:
   - description: 'Loaded image screenshot'
     path: screens/2.png
+
+# https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
 # flutter:
 #   plugin:
+#     # implements: n_image_picker
 #     platforms:
-#     # https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
-#       some_platform:
-#         pluginClass: somePluginClass
+#       android:
+#         pluginClass: NImagePicker
+#       ios:
+#         pluginClass: NImagePicker
+#       macos:
+#         pluginClass: NImagePicker
+#       web:
+#         pluginClass: NImagePicker
+#         fileName: n_image_picker.dart
+#       windows:
+#         pluginClass: NImagePickerApi
