--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 1.2.0
+version: 1.2.1
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -12,14 +12,14 @@ topics:
   - cross-platform
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
-  flutter: '>=3.3.0'
+  sdk: '>=3.3.1 <4.0.0'
+  flutter: '>=1.17.0'
 
 
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
   http: ^1.2.0
   http_parser: ^4.0.2
   plugin_platform_interface: ^2.0.2
@@ -27,6 +27,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.0
 
 screenshots:
   - description: 'Loaded image screenshot'
