--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 1.2.1
+version: 1.3.0
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -22,7 +22,7 @@ dependencies:
   file_picker: ^8.0.0+1
   http: ^1.2.0
   http_parser: ^4.0.2
-  plugin_platform_interface: ^2.0.2
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
