--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 2.1.3
+version: 2.2.0
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -19,15 +19,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^8.0.0+1
+  file_picker: ^8.0.4
   http: ^1.2.0
   http_parser: ^4.0.2
-  path_provider: ^2.1.2
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  # flutter_lints: ^3.0.0
 
 screenshots:
   - description: 'Loaded image screenshot'
