--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 2.2.1
+version: 2.3.0
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -23,6 +23,7 @@ dependencies:
   http: ^1.2.0
   http_parser: ^4.0.2
   path_provider: ^2.1.3
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
