--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 2.3.0
+version: 2.3.1
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -24,6 +24,7 @@ dependencies:
   http_parser: ^4.0.2
   path_provider: ^2.1.3
   image: ^4.2.0
+  web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
