--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  web: ^1.0.0
+  js: ^0.7.1
 
 dev_dependencies:
   integration_test:
