--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 2.4.0
+version: 3.0.0
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -26,6 +26,7 @@ dependencies:
   image: ^4.2.0
   web: ^1.0.0
   uuid: ^4.5.1
+  dotted_decoration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
