--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   web: ^1.0.0
   uuid: ^4.5.1
   dotted_decoration: ^2.0.0
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
