--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: n_image_picker
 description: Configurable and easy-to-use cross-platform image selector.
-version: 3.3.3
+version: 4.0.0
 
 homepage: https://github.com/nycm1989/nImagePicker
 repository: https://github.com/nycm1989/nImagePicker
@@ -12,26 +12,22 @@ topics:
   - cross-platform
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.9.0
   flutter: ">=1.17.0"
 
 
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^9.0.0
-  http: ^1.2.0
-  http_parser: ^4.0.2
-  path_provider: ^2.1.3
+  file_picker: ^10.3.3
   image: ^4.2.0
   web: ^1.1.0
-  uuid: ^4.5.1
-  dotted_decoration: ^2.0.0
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 screenshots:
   - description: 'Loaded image screenshot'
